Finish swager related work
