# internal/model/article.go
@@ -1,5 +1,9 @@
 package model
 
+import (
+	"github.com/zhouya0/blog/pkg/app"
+)
+
 type Article struct {
 	*Model
 	Title string `json:"title"`
@@ -7,6 +11,11 @@ type Article struct {
 	Content string `json:"convert"`
 	CoverImageUrl string `json:"cover_image_url"`
 	State uint8 `json:"state"`
+}
+
+type ArticleSwagger struct {
+	List []*Article
+	Pager *app.Pager
 }
 
 func (a Article) TableName() string {
